# parwanweb

./: README.md  pyproject.toml  requirements.txt
src/: .env  txt
src/app/: main.py
src/app/api/: __init__.py  category.py  image_upload.py  news.py
src/app/api/routes/: admin.py  categories.py  editions.py  epaper.py  frontend.py  home.py  public.py
src/app/api/web/: admin_auth.py  admin_dashboard.py  archive.py  category.py  contact.py  epaper.py  home.py  news.py  news_detail.py  search.py
src/app/core/: config.py  security.py
src/app/db/: __init__.py  base.py  database.py  init_db.py  session.py
src/app/dependencies/: auth.py
src/app/models/: __init__.py  admin_user.py  base.py  category.py  contact.py  edition.py  epaper.py  news.py  topbar.py  user.py
src/app/schemas/: __init__.py  admin_user.py  category.py  edition.py  news.py  user.py
src/app/schemas/admin/: auth.py
src/app/services/: category.py  news.py  news_service.py  user_service.py
src/app/static/: __init__.py  readme.txt
src/app/static/css/: style.css
src/app/templates/: __init__.py  archive.html  article_detail.html  base.html  category.html  contact.html  dashboard.html  home.html  index.html  login.html  news_create.htm  news_detail.html  news_list.htm  search_results.html  web_base.html
src/app/templates/admin/: admin_login.html  base.html  dashboard.html
src/app/templates/admin/articles/: create.html  edit.html  list.html
src/app/templates/admin/editions/: edit.html  (+2 more)
src/app/templates/news/: article_detail.html
src/parwanweb/: __init__.py
src/tests/: test_main.py
(+6 files in other folders)
